# ESProjects

./: README.md  node-red.txt
AutomatedWatering[220V]/AutomatedWatering_220V_/: AutomatedWatering_220V_.ino
BookCaseModem/BookCaseModem/: BookCaseModem.ino
FloodSensor/at-tiny85/: at-tiny85.ino
FloodSensor/sketch_jul24a/: sketch_jul24a.ino
HumiditySensor/HumidItySensor/: HumiditySensor.ino
HumiditySensor/HumidItySensor/data/: calib_9e_3a_d8
HumiditySensor/LowPowerControl/: LowPowerControl.ino
LightFanTemp/: CMakeLists.txt  comms_unit_test.c  led_helpers.h  led_unit_tests.c  macro_helpers.h  main.c  main.cpp  preprocess.c  serial_comms.c  serial_comms.h
PumpControl/: README.md
PumpControl/attiny85_source.ino/: attiny85_source.ino.ino
PumpControl/esp_client/: esp_client.ino
PumpControl/esp_server/: esp_server.ino
Schematic/projects/ESP Client/: ESP Client.json  PCB_2020-12-30_18-31-08.json  info
Schematic/projects/ESP_Server/: ESP_Server.json  PCB_2021-01-03_18-17-48.json  info
Schematic/projects/Water Sensor/: Water Sensor.json  info
Schematic/projects/WaterTank/: WaterTank.json  info
WaterExtTemp/WaterExtTemp/: WaterExtTemp.ino
WaterTank/WaterTank/: WaterTank.ino
at-tiny85/: at-tiny85.ino
sketch_jul24a/: sketch_jul24a.ino
